--- a/config/example.dev.env
+++ b/config/example.dev.env
@@ -1,10 +1,8 @@
-# Server
-TCP_PORT=3001
-GRPC_PORT=3002
-
 # Postgres
 PG_IP=localhost
 PG_PORT=5433
 PG_DATABASE=bank_account
 PG_USER=postgres
 PG_PASSWORD=postgres
+
+ACCOUNT_MAX_LIMIT=500000000
